apps/automata/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: automata
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: automata
    app.kubernetes.io/name: automata
  ports:
    - name: ssh
      appProtocol: ssh
      port: 22
      targetPort: ssh
    - name: mdns
      appProtocol: mdns
      port: 5353
      protocol: UDP
      targetPort: mdns
    - name: dashboard
      appProtocol: http
      port: 9119
      targetPort: dashboard
    - name: a2a
      appProtocol: http
      port: 9900
      targetPort: a2a
    - name: api-server
      appProtocol: http
      port: 8642
      targetPort: api-server
    - name: webhook
      appProtocol: http
      port: 8644
      targetPort: webhook
